# LLVMDynamicTools

./: CMakeLists.txt  Makefile  README.md  external.cpp  interpreter.cpp  interpreter.h  main.cpp  main.h  pts-external.cpp  pts-external.h  util.cpp  util.h  varInit.cpp  varInit.h  variable.cpp  variable.h
include/LLVMFuzzer/: BlockGenerator.h  GeneratorEnvironment.h  Modifier.h  ProgramGenerator.h  Random.h  ValueGenerator.h  ValuePool.h
include/LLVMInterpreter/: DynamicValue.h  Interpreter.h  Memory.h  StackFrame.h
src/: CMakeLists.txt
src/LLVMFuzzer/: BlockGenerator.cpp  CMakeLists.txt  GeneratorEnvironment.cpp  Modifier.cpp  ProgramGenerator.cpp  ValueGenerator.cpp  ValuePool.cpp  main.cpp
src/LLVMInterpreter/: CMakeLists.txt  DynamicValue.cpp  Evaluation.cpp  External.cpp  InfoDump.cpp  Interpreter.cpp  main.cpp
